fix popup app not having scrollbar

--- a/styles/_popup.scss
+++ b/styles/_popup.scss
@@ -16,6 +16,7 @@
     .window-content {
         padding: 0;
         color: var(--color);
+        overflow-y: auto;
 
         hr {
             margin: revert;
